--- a/languages/mailinglijst-en_US.po
+++ b/languages/mailinglijst-en_US.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2013-12-11 16:55+0100\n"
+"PO-Revision-Date: 2013-12-12 19:21+0100\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,3 +29,6 @@ msgstr "Settings"
 
 msgid "Lijstnummer"
 msgstr "List ID"
+
+msgid "I want to use my own CSS"
+msgstr "I want to use my own CSS"
