--- a/languages/mailinglijst-nl_NL.po
+++ b/languages/mailinglijst-nl_NL.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2013-12-11 16:53+0100\n"
+"PO-Revision-Date: 2013-12-12 19:20+0100\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,3 +29,6 @@ msgstr "Instellingen"
 
 msgid "Lijstnummer"
 msgstr "Lijstnummer"
+
+msgid "I want to use my own CSS"
+msgstr "Ik gebruik mijn eigen CSS"
